# cmake_learn

./: CMakeLists.txt  README.md  add.cpp  gen.sh  human.cc
include/: add.h  fileHandler.h  human.h
scripts/: demo.cc
src/: fileHandler.cpp  max.cpp
